tests/fail/17_char_empty.lang
функция Начало(): целое {
  символ empty = '';
  вернуть 0;
}
